# ProgramacionC

./: CMakeLists.txt
EjerciciosClase/: EjemploPAPA.c  a.out
EjerciciosClase/AlgoritmoPeterson/: a.out  peterson.c
EjerciciosClase/Clase30Marz/: ejercicioClase.c
EjerciciosClase/DescriptoresFichero/: a.out  descriptores.c
EjerciciosClase/EjempleExec/: a.out  ejemploExec.c
EjerciciosClase/EjemploSigterm/: a.out  ejemploSigterm.c  ejemplosSigterm_ignore.c
EjerciciosClase/Ejercicio0/: a.out  ejercicio0.c
EjerciciosClase/Ejercicio1/: ejercicioClase.c
EjerciciosClase/Ejercicio2/: ejercicioClase2.c
EjerciciosClase/Ejercicio2.3/: File.txt  Hola.txt  ejercicio23.c
EjerciciosClase/Ejercicio2Proc1Arch/: a.out  ejercicioprocesosarchivo.c
EjerciciosClase/Ejercicio3/: ejercicioClase3.c
EjerciciosClase/Ejercicio3.1/: a.out  ejercicio31.c
EjerciciosClase/Ejercicio3.3/: a.out  ejercicio33.c
EjerciciosClase/Ejercicio3.4/: a.out  ejercicio34.c
EjerciciosClase/Ejercicio4/: File.txt  ejercicio4.c
EjerciciosClase/Ejercicio4.1/: ejercicio41.c
EjerciciosClase/Ejercicio5/: ejercicio5.c
EjerciciosClase/EjercicioFabrica/: a.out  ejercicio fábrica.docx  fabrica.c
EjerciciosClase/EjercicioFork/: fork.c
EjerciciosClase/EjercicioHilos/: ejercicioHilos.c
EjerciciosClase/EjercicioTema2/: ejercicioclase.c
EjerciciosClase/ErrorLLamadasSist/: errorCall.c
EjerciciosClase/HolaAdiosSem/: a.out  ejercicioclase.c
EjerciciosClase/Lectores&Escirtores/: prioridadlectores.c
EjerciciosClase/Semaforos/: a.out  semaforo.c
EjerciciosClase/Tema5/: a.out  ejercicioBanco.c
Practica1/Ejercicio2/: Ejercicio2.c  multiplica
Practica1/Ejercicio3/: Ejercicio3.c
Practica1/Ejercicio4/: Ejercicio4.c
Practica2/Ejercicio1/: ejercicio1.c
Practica3/: a.out  peluqueria.c
PrimerProgra/: miprimerprograma.c
practica/: a.out  practica.c
(+11 files in other folders)
